# msc-graphstudy

./: .gitignore  .msc-graphstudy  AUTHORS  CMakeLists.txt  COPYING_CC4-BY-NC-ND.txt  COPYING_GFDL.txt  COPYING_GPL3.txt  COPYING_MIT.txt  INSTALL  LICENSE  NEWS  README  README.md  config  config.h.in  doxygen.conf.in  driver-tests.cmake  ogdf.cmake
benchmarks/: history.py  macro-driver.py  micro-driver.py
codegen/: enums.json  enums.py
config-heavy/: graphs.cfg  imports.json  interpolation.cfg  layouts.cfg  properties-cont.cfg  properties-disc.cfg  worsening.cfg
config-light/: README  imports.json
driver/: __init__.py  alternatives.py  archidx.py  cli.py  compare.py  configuration.py  constants.py  crash.py  deploy.py  doctests.py  errors.py  features.py  graphs.py  httpd.py  imports.py  integrity.py  layinter.py  layouts.py  layworse.py  manager.py  metrics.py  model.py  nn.py  properties.py  quarry.py  tools.py  utility.py  xjson.py
eval/: CMakeLists.txt  cleanup.cmake  cross-validate.py  get-huang-parameters.py  make-config-puncture.py  (+1 more)
paper/: CMakeLists.txt  appendix.tex  graphstudy-arxiv.tex  graphstudy-gd18.tex  graphstudy.tex  literature.bib  preamble.tex  rename-metrics.txt  rename-properties.txt  rename-tests.txt  sec-conc.tex  sec-data.tex  sec-eval.tex  sec-featex.tex  sec-intro.tex  sec-model.tex  sec-relwork.tex  sec-syndromes.tex  tango-colors.sty  transmogrify.awk  update-cache.cmake
paper/pics/: 5b3b66d2-49e8882a-more.xml.bz2  8314f2c1-4d644640-more.xml.bz2  CMakeLists.txt  angular.gplt  d8c1498f-4c2beafc-less.xml.bz2  discriminator.tex  entropy-regression.gplt  gen-lindenmayer-clique.tex  gen-lindenmayer-grid.tex  gen-lindenmayer-ring.tex  gen-lindenmayer-singleton.tex  gen-lindenmayer-star.tex  gen-lindenmayer-wheel.tex  gen-mosaic-flower.tex  gen-mosaic-shape.tex  gen-mosaic-star.tex  property-config.gplt  rdf-global.gplt
report/: CMakeLists.txt  abbreviations.tex  graphstudy.cls  graphstudy.tex  literature.bib  notation.tex  preamble.tex  titlepage.tex
report/fonts/: CMakeLists.txt
report/pics/: CMakeLists.txt  adaptive-sampling.cxx  adaptive-sampling.gplt  angular-explanation.tex  angular.gplt  diffent-rdf-local.gplt  edge-length.gplt  entropy-regression.gplt  gen-lindenmayer-clique.tex  gen-lindenmayer-grid.tex  gen-lindenmayer-ring.tex  gen-lindenmayer-singleton.tex  gen-lindenmayer-star.tex  gen-lindenmayer-wheel.tex  gen-mosaic-flower.tex  gen-mosaic-shape.tex  gen-mosaic-star.tex  gen-quasi-concept-tikz.cxx  get-graph-info.py  glidescale.gplt  histoscale.gplt  inter-parent.xml.bz2  intro-limits-bends.tex  intro-limits-kinks.tex  intro-limits-labels.tex  intro-limits-okay.tex  intro-vertical.tikz  methodology-pipeline.tex  pathological-xlinear-a.xml  pathological-xlinear-b.xml  princomp.gplt  property-config.gplt  rdf-global.gplt  rdf-local.gplt  tension.gplt
slides_2018-04-24_kit/: CMakeLists.txt  graphstudy.tex  literature.bib  preamble.tex
slides_2018-04-24_kit/pics/: CMakeLists.txt  angular.gplt  edge-length.gplt  entropy-regression.gplt  princomp.gplt  property-config.gplt  rdf-global.gplt  rdf-local.gplt  tension.gplt
slides_2018-09-26_gd18/: CMakeLists.txt  disco-couples.txt  graphstudy.tex  literature.bib  preamble.tex  rename-properties.txt  rename-tests.txt
slides_2018-09-26_gd18/pics/: CMakeLists.txt  angular.gplt  discriminator.tex  entropy-regression.gplt  property-config.gplt  rdf-global.gplt
src/: CMakeLists.txt
src/bitrans/: CMakeLists.txt  interpol.cxx
src/common/: CMakeLists.txt  angular.cxx  angular.hxx  cli.cxx  cli.hxx  cli.txx  cuboid.cxx  cuboid.hxx  cuboid.txx  data_analysis.cxx  data_analysis.hxx  data_analysis.txx  dummy.cxx  edge_crossing.cxx  edge_crossing.hxx  edge_crossing.txx  edge_length.cxx  edge_length.hxx  file.cxx  file.hxx  file.txx  fingerprint.cxx  fingerprint.hxx  histogram.cxx  histogram.hxx  histogram.txx  io.cxx  io.hxx  iosupp.cxx  iosupp.hxx  json.cxx  json.hxx  mainpage.dox.in  math_constants.cxx  math_constants.hxx  meta.cxx  meta.hxx  normalizer.cxx  normalizer.hxx  numeric.cxx  (+42 more)
src/generators/: CMakeLists.txt  bottle.cxx  grid.cxx  import.cxx  lindenmayer.cxx  mosaic.cxx  quasi.cxx  randgeo.cxx  tree.cxx
src/layouts/: CMakeLists.txt  force.cxx  phantom.cxx  random.cxx  sugiyama.cxx
src/metrics/: CMakeLists.txt  huang.cxx  stress.cxx
src/properties/: CMakeLists.txt  angular.cxx  edge-length.cxx  princomp.cxx  rawdata.cxx  rdf-global.cxx  rdf-local.cxx  tension.cxx
src/unitrans/: CMakeLists.txt  flip-edges.cxx  flip-nodes.cxx  movlsq.cxx  perturb.cxx  randiso.cxx  rotate.cxx
src/utility/: CMakeLists.txt  fingerprint.cxx
src/visualizations/: CMakeLists.txt  picture.cxx
test/: CMakeLists.txt  driver-check.py
test/config/: graphs.cfg  imports.json  layouts.cfg  properties-cont.cfg
test/data/: CMakeLists.txt  adamantane-layout.xml  cube-graph.xml  cube-layout-normal.xml  cube-layout.xml  events.txt  julis-layout.xml  kit-layout.xml  mansion-layout.xml  zigzag-layout.xml
test/perf/: CMakeLists.txt
test/perf/macro/: CMakeLists.txt  Manifest.json.in  sleepy.cxx
test/perf/micro/: CMakeLists.txt  Manifest.json.in  load.cxx  sleepy.cxx  store.cxx
test/unit/: CMakeLists.txt  angular.cxx  cli.cxx  cuboid.cxx  data_analysis.cxx  edge_crossing.cxx  edge_length.cxx  file.cxx  fingerprint.cxx  histogram.cxx  io.cxx  iosupp.cxx  json.cxx  math_constants.cxx  meta.cxx  normalizer.cxx  numeric.cxx  ogdf_fix.cxx  ogdf_fwd.cxx  pairwise.cxx  point.cxx  princomp.cxx  projection.cxx  random.cxx  rdf.cxx  regression.cxx  rlimits.cxx  sliding.cxx  stochastic.cxx  stress.cxx  strings.cxx  tension.cxx  useful.cxx
test/unit/enums/: algorithms.cxx  binnings.cxx  compressions.cxx  distributions.cxx  fileformats.cxx  kernels.cxx  projections.cxx  terminals.cxx  treatments.cxx
test/x-bm/: CMakeLists.txt  benchmark.cxx  benchmark.hxx  benchmark.txx
test/x-ta/: CMakeLists.txt
test/x-ta/testaux/: cube.cxx  cube.hxx  envguard.cxx  envguard.hxx  stdio.cxx  stdio.hxx  tempfile.cxx  tempfile.hxx
test/x-ut/: CMakeLists.txt  selftest.cxx  unittest.cxx  unittest.hxx  unittest.txx
(+70 files in other folders)
